...
                    }
                    LabeledContent("バージョン", value: "1.2.0")
                    LabeledContent("IIIF API", value: "Image API 2.0")
                }

            }
            .navigationTitle("設定")
            .navigationBarTitleDisplayMode(.inline)
            .toolbar {
                ToolbarItem(placement: .confirmationAction) {
                    Button("完了") {
                        isPresented = false
                    }
...
